--- a/JuParejas/index.html
+++ b/JuParejas/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="styles/estilo.css">
 </head>
 <body>
+
+    <div id="opciones_inicio">
+        <input type="radio" name="2x2" id="input22">
+        <input type="radio" name="2x3" id="input23">
+        <input type="radio" name="4x4" id="input4">
+        <input type="radio" name="6x6" id="input6">
+    </div>
     
     <div id="contenedorTabla">
         
