--- a/JuParejas3/5descubreparejas.html
+++ b/JuParejas3/5descubreparejas.html
@@ -6,7 +6,6 @@
     </title>
     <link rel="stylesheet" type="text/css" href="estilo2.css">
     <script src="https://albert-gonzalez.github.io/easytimer.js/dist/easytimer.min.js"></script>
-    <script src="envio.js"></script>
     <script language="javascript">
         window.onload = iniciarTablero;
         var reloj; 
@@ -117,6 +116,16 @@
         </tr>
     </table>
     <div id="tiempo"></div>
+
+    <div id="contenedor_lista">
+        <table>
+            <th id="col_nombre" style="height: 20px;">Nombre</th>
+            <th id="col_tiempo" style="height: 20px;">Tiempo</th>
+        </table>
+    </div>
+
+    <script src="envio.js"></script>
+
 </body>
 
 </html>
